三个聚合保存拆开：编号注释 1.~9. 是「这几段该是方法」的信号
抽奖工作台、彩票工作台、商城商品保存，是工程里最长的三个方法，
且都长成同一个样子：一个 @Transactional 方法从头到尾 100~220 行，
中间靠 // 1. // 2. ... // 9. 的编号注释分段。编号注释是最明确的信号 ——
写的人已经在脑子里把它分成了几件事，只是没有落成方法名。

  MallCommodityService.save          222 -> 26 行，拆出 13 段
  PrizePoolConfigService.workbenchSave 171 -> 20 行，拆出 11 段
  LotteryConfigService.workbenchSave    89 -> 14 行，拆出  8 段
  PrizePoolConfigService.workbenchDetail 75 -> 32 行，拆出 2 个 Tab
  LotteryConfigService.workbenchDetail   66 -> 30 行，拆出 ruleTab
  PrizePoolConfigService.checkOnlineStructureLock 53 -> 5 行，拆出 3 把锁

新增四个私有 record 给「一组要一起传的东西」起名：

  Current  奖池工作台的库内现状（物资/奖池 + 两张索引表），
           校验、结构锁、落库三个阶段反复要用，一次查完传下去
  Shelf    商品的上架窗口与限兑周期 —— 四个字段都有服务端默认值，
           不是把表单值搬过去，起个名字才看得出这件事
  SkuPlan  SKU 整表 diff 的计划：要落的行 + 要删的行。
           先算完再落库不是风格问题：边插边判的话，
           这次新建的行会被当成「库里有、表单没有」而删掉
  PoolShape / IssueTally 同前一个提交的用法

顺带改掉的两处「返回 null 表示通过」：

  checkOnlineStructureLock 与 validateRules 都是「返回错误文案，null 表示没问题」，
  而两个调用方拿到之后做的事一模一样 —— if != null then throw。
  中间那层 String 除了让人多读一遍别无用处，改成直接抛。
  （checkOnlineReady 保留这个形态：它的返回值真的有第二个消费者，
   LotteryActivityRefProvider 要拿那句文案去显示「还差什么」。）

顺带修掉的东西：

1. PrizePoolConfigService.workbenchDetail 里两个含义不同的布尔量都叫
   drawConfigured，一个是「配过没有」、一个是「编码是否冻结」，
   传给 DTO 时是两个相邻的同名实参。现在按各自含义分行并注释。

2. MallCommodityService.save 里 entity.setUpdateBy 在 if/else 两个分支各写一遍，
   saveSkus 里同样。提到分支外。

全量测试通过：admin 221 个用例全绿。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>